# kabardian-poetry-postgres-data-pipeline

./: .gitignore  Dockerfile  README.md  copy_to_aws.py  docker-compose.yml  insert_data.py  pyproject.toml  sql_observations.sql
dbt_kabardian_lang/: dbt_project.yml
kabardian_poems/: .gitignore  dbt_project.yml
postgres_transformation/: dbt_project.yml
postgres_transformation/models/example/: poems_poem.sql  poems_poem_words.sql  poems_word.sql  schema.yml  sources.yml  words_per_poem.sql
