[tool.poetry]
name = "kabardian-poetry-data-dump"
version = "0.1.0"
description = ""
authors = ["kkumyk <k.kumykova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
requests = "^2.32.3"
lxml = "^5.3.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
